FIX: graphical layout issues

--- a/front-end/src/style/style.scss
+++ b/front-end/src/style/style.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-    // height: calc(100vh - 60px);
+    height: calc(100vh - 120px);
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,5 +18,6 @@ body {
 
 /* Main content */
 .main-content {
-    flex-grow: 1; 
+    // flex-grow: 1;
+    // display: flex; 
 }
